--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -8,6 +8,7 @@
 @cep-color-red: #6B0504;
 @cep-color-grey: #4D545D;
 @cep-color-white: #FBFBFB;
+@cep-color-dark-blue-transparent: #082A47CC;
 
 //escaping for tablet
 @tablet: ~"(max-width: 800px";
